fix: switch-toggle button background not visible on high-contrast themes due to lack of vscode style variables

--- a/packages/vscode-extension/src/webview/styles/theme.css
+++ b/packages/vscode-extension/src/webview/styles/theme.css
@@ -332,3 +332,8 @@ body {
   --swm-dropdown-border: 1px solid var(--vscode-menu-border);
   --swm-dropdown-shadow: 0 0 8px 2px var(--vscode-widget-shadow);
 }
+
+body.vscode-high-contrast {
+  --swm-switch-root-background-checked: var(--vscode-editorGutter-addedBackground);
+  --swm-switch-root-background: var(--vscode-editorOverviewRuler-addedForeground);
+}
